--- a/HomeMates/VIew/Profile.storyboard
+++ b/HomeMates/VIew/Profile.storyboard
@@ -98,7 +98,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Name" placeholder="輸入新名稱" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cor-AS-tax" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="20" y="218" width="335" height="40"/>
+                                <rect key="frame" x="25" y="218" width="330" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="d92-p0-uEB"/>
                                 </constraints>
@@ -106,15 +106,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oy1-aV-1yB">
-                                <rect key="frame" x="20" y="258" width="335" height="1"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="R3X-D5-khz"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXt-6Y-rXV">
-                                <rect key="frame" x="20" y="279" width="100" height="30"/>
+                                <rect key="frame" x="20" y="278" width="100" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="所屬群組" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9i8-lp-015">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
@@ -139,7 +132,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Test00HomeName" placeholder="輸入新目標" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qoq-qg-ipi" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="20" y="311" width="335" height="40"/>
+                                <rect key="frame" x="25" y="310" width="330" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="vRO-Fp-M7h"/>
                                 </constraints>
@@ -147,22 +140,8 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OfE-7I-1UV">
-                                <rect key="frame" x="20" y="351" width="335" height="1"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="Wak-9u-j7y"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9pf-98-aIt">
-                                <rect key="frame" x="20" y="449" width="335" height="1"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="yJy-0e-HPY"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LaK-nd-kQw">
-                                <rect key="frame" x="20" y="377" width="100" height="30"/>
+                                <rect key="frame" x="20" y="370" width="100" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="目標積分" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="27r-Bf-TAR">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
@@ -193,7 +172,7 @@
                                 </state>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="輸入目標積分" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OYf-AD-099" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
-                                <rect key="frame" x="20" y="409" width="335" height="40"/>
+                                <rect key="frame" x="25" y="402" width="330" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Dli-Vl-lLi"/>
                                 </constraints>
@@ -204,31 +183,22 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="9pf-98-aIt" firstAttribute="trailing" secondItem="OYf-AD-099" secondAttribute="trailing" id="2PJ-Ej-dkS"/>
                             <constraint firstItem="LaK-nd-kQw" firstAttribute="leading" secondItem="9i8-lp-015" secondAttribute="leading" id="5GQ-wW-JAE"/>
                             <constraint firstItem="qoq-qg-ipi" firstAttribute="top" secondItem="GXt-6Y-rXV" secondAttribute="bottom" constant="2" id="7xy-fM-viX"/>
                             <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="cor-AS-tax" secondAttribute="trailing" constant="20" id="8W0-rD-H0S"/>
                             <constraint firstItem="cor-AS-tax" firstAttribute="top" secondItem="qyg-Bl-KSX" secondAttribute="bottom" constant="4" id="D5B-zw-Od1"/>
                             <constraint firstItem="Z8I-PC-CSm" firstAttribute="centerX" secondItem="f96-Yt-DsY" secondAttribute="centerX" id="Eer-E2-YLm"/>
-                            <constraint firstItem="GXt-6Y-rXV" firstAttribute="top" secondItem="Oy1-aV-1yB" secondAttribute="bottom" constant="20" id="F0E-cG-Wj1"/>
                             <constraint firstItem="9i8-lp-015" firstAttribute="leading" secondItem="00R-dw-r26" secondAttribute="leading" id="Fyx-FY-ALq"/>
-                            <constraint firstItem="OfE-7I-1UV" firstAttribute="trailing" secondItem="qoq-qg-ipi" secondAttribute="trailing" id="G2V-vE-eRi"/>
                             <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="OYf-AD-099" secondAttribute="trailing" constant="20" id="INg-7l-bwJ"/>
-                            <constraint firstItem="Oy1-aV-1yB" firstAttribute="trailing" secondItem="cor-AS-tax" secondAttribute="trailing" id="OB8-ry-iuE"/>
-                            <constraint firstItem="LaK-nd-kQw" firstAttribute="top" secondItem="OfE-7I-1UV" secondAttribute="bottom" constant="25" id="TMs-3q-s5k"/>
-                            <constraint firstItem="cor-AS-tax" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="20" id="UfT-cI-YyX"/>
+                            <constraint firstItem="LaK-nd-kQw" firstAttribute="top" secondItem="qoq-qg-ipi" secondAttribute="bottom" constant="20" id="R7D-e2-BW4"/>
+                            <constraint firstItem="cor-AS-tax" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="25" id="UfT-cI-YyX"/>
                             <constraint firstItem="qyg-Bl-KSX" firstAttribute="top" secondItem="3YC-Nz-e5s" secondAttribute="top" constant="120" id="Uta-2D-OQF"/>
                             <constraint firstItem="qoq-qg-ipi" firstAttribute="leading" secondItem="cor-AS-tax" secondAttribute="leading" id="WDo-OY-dq9"/>
-                            <constraint firstItem="Oy1-aV-1yB" firstAttribute="leading" secondItem="cor-AS-tax" secondAttribute="leading" id="Wsp-gg-OL7"/>
                             <constraint firstItem="fHl-Y3-25R" firstAttribute="centerX" secondItem="f96-Yt-DsY" secondAttribute="centerX" id="YIN-ku-7Vw"/>
+                            <constraint firstItem="GXt-6Y-rXV" firstAttribute="top" secondItem="cor-AS-tax" secondAttribute="bottom" constant="20" id="YWG-8t-xhm"/>
                             <constraint firstItem="OYf-AD-099" firstAttribute="leading" secondItem="qoq-qg-ipi" secondAttribute="leading" id="ZP3-Ey-cXL"/>
                             <constraint firstItem="OYf-AD-099" firstAttribute="top" secondItem="LaK-nd-kQw" secondAttribute="bottom" constant="2" id="Zet-Nx-I0L"/>
-                            <constraint firstItem="Oy1-aV-1yB" firstAttribute="top" secondItem="cor-AS-tax" secondAttribute="bottom" id="c1p-5s-QbM"/>
-                            <constraint firstItem="OfE-7I-1UV" firstAttribute="leading" secondItem="qoq-qg-ipi" secondAttribute="leading" id="gKW-6z-Ts4"/>
                             <constraint firstItem="Z8I-PC-CSm" firstAttribute="top" secondItem="fHl-Y3-25R" secondAttribute="bottom" constant="8" id="hGj-7p-zlG"/>
-                            <constraint firstItem="9pf-98-aIt" firstAttribute="top" secondItem="OYf-AD-099" secondAttribute="bottom" id="iQH-eI-qMs"/>
-                            <constraint firstItem="OfE-7I-1UV" firstAttribute="top" secondItem="qoq-qg-ipi" secondAttribute="bottom" id="loF-rA-1tx"/>
-                            <constraint firstItem="9pf-98-aIt" firstAttribute="leading" secondItem="OYf-AD-099" secondAttribute="leading" id="q6D-Xm-NUZ"/>
                             <constraint firstItem="3YC-Nz-e5s" firstAttribute="trailing" secondItem="qoq-qg-ipi" secondAttribute="trailing" constant="20" id="uix-t5-TP2"/>
                             <constraint firstItem="qyg-Bl-KSX" firstAttribute="leading" secondItem="3YC-Nz-e5s" secondAttribute="leading" constant="20" id="wwZ-Il-fuT"/>
                             <constraint firstItem="fHl-Y3-25R" firstAttribute="top" secondItem="3YC-Nz-e5s" secondAttribute="top" constant="10" id="znQ-yQ-gnn"/>
